syntax = "proto3";
package ojochainibcdemo.oracleintegration;

import "gogoproto/gogo.proto";

option go_package = "github.com/ojo-network/ojo-chainibc-demo/x/oracleintegration/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  string source_channel = 1;
}

